add stylesheet link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 			sizes="32x32"
 			href="./assets/images/favicon-32x32.png" />
 		<title>Frontend Mentor | Social links profile</title>
+		<link
+			rel="stylesheet"
+			href="./dist/index.css" />
 	</head>
 
 	<body>
