add html layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,48 @@
 	</head>
 
 	<body>
-		Jessica Randall London, United Kingdom "Front-end developer and avid
-		reader." GitHub Frontend Mentor LinkedIn Twitter Instagram
+		<main class="card">
+			<div class="profile__pic">
+				<img
+					src="./assets/images/paul-profile.png"
+					alt=""
+					class="image__profile__pic"
+					width="88"
+					height="88" />
+			</div>
+
+			<div class="location">
+				<h1 class="location__title">Paul Aboagye</h1>
+				<p class="location__description">
+					Alexandria, United States of America
+				</p>
+			</div>
+
+			<div class="bio">
+				<p>"Front-end developer and avid reader."</p>
+			</div>
+
+			<div class="links">
+				<div class="links__github">
+					<a href="https://github.com/mayor-creator">GitHub </a>
+				</div>
+				<div class="links__frontend">
+					<a href="https://www.frontendmentor.io/profile/mayor-creator"
+						>Frontend Mentor</a
+					>
+				</div>
+				<div class="links__linkedln">
+					<a href="https://www.linkedin.com/in/paul-aboagye-518703107/"
+						>LinkedIn</a
+					>
+				</div>
+				<div class="links__threads">
+					<a href="https://www.threads.net/@mayor_creator">Threads</a>
+				</div>
+				<div class="links__intstagram">
+					<a href="https://www.instagram.com/mayor_creator/">Instagram</a>
+				</div>
+			</div>
+		</main>
 	</body>
 </html>
