add wrapper class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<main class="card">
+		<main class="card wrapper">
 			<div class="profile__pic">
 				<img
 					src="./assets/images/paul-profile.png"
