--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>Frontend Mentor | Social links profile</title>
 		<link
 			rel="stylesheet"
-			href="./dist/index.css" />
+			href="./dist/style.css" />
 	</head>
 
 	<body>
