add class to bio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 
 			<div class="bio">
-				<p>"Front-end developer and avid reader."</p>
+				<p class="bi0__message">"Front-end developer and avid reader."</p>
 			</div>
 
 			<div class="links">
