--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
 			</div>
 
 			<div class="links">
-				<div class="links__github">
+				<div class="links__github item">
 					<a href="https://github.com/mayor-creator">GitHub </a>
 				</div>
-				<div class="links__frontend">
+				<div class="links__frontend item">
 					<a href="https://www.frontendmentor.io/profile/mayor-creator"
 						>Frontend Mentor</a
 					>
 				</div>
-				<div class="links__linkedln">
+				<div class="links__linkedln item">
 					<a href="https://www.linkedin.com/in/paul-aboagye-518703107/"
 						>LinkedIn</a
 					>
 				</div>
-				<div class="links__threads">
+				<div class="links__threads item">
 					<a href="https://www.threads.net/@mayor_creator">Threads</a>
 				</div>
-				<div class="links__intstagram">
+				<div class="links__intstagram item">
 					<a href="https://www.instagram.com/mayor_creator/">Instagram</a>
 				</div>
 			</div>
