remove last name

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 			</div>
 
 			<div class="location">
-				<h1 class="location__title">Paul Aboagye</h1>
+				<h1 class="location__title">Paul</h1>
 				<p class="location__description">
 					Alexandria, United States of America
 				</p>
 			</div>
 
 			<div class="bio">
-				<p class="bio__message">"Front-end developer and avid reader."</p>
+				<p class="bio__message">"Front-end developer and verge reader."</p>
 			</div>
 
 			<div class="links">
